# storia

./: .gitignore  README.md  langgraph.json  package-lock.json  package.json
apps/agents/src/: utils.ts
apps/agents/src/open-canvas/: index.ts  prompts.ts  state.ts
apps/agents/src/open-canvas/nodes/: applyApprovedChanges.ts  customAction.ts  generateFollowup.ts  humanApprover.ts  rejectChanges.ts  replyToGeneralInput.ts  rewriteArtifactTheme.ts  rewriteCodeArtifactTheme.ts  updateArtifact.ts  updateHighlightedText.ts
apps/agents/src/reflection/: index.ts  state.ts
apps/agents/src/summarizer/: index.ts
apps/agents/src/thread-title/: index.ts  state.ts
apps/agents/src/web-search/nodes/: search.ts
apps/backend/: app.py  langgraph.json  pyproject.toml
apps/backend/auth/: verify.py
apps/deprecate/agents/: package.json
apps/deprecate/agents/src/open-canvas/: state.ts
apps/deprecate/agents/src/thread-title/: index.ts  state.ts
apps/deprecate/agents/src/web-search/: state.ts
apps/web/: package.json
apps/web/src/: constants.ts  types.ts
apps/web/src/app/: layout.tsx
apps/web/src/components/: ApprovalDialog.tsx
apps/web/src/components/artifacts/: ArticleContainer.tsx  ArtifactRenderer.tsx  ArtifactV4Renderer.tsx  CodeRenderer.tsx  TextRenderer.tsx
apps/web/src/contexts/: AssistantContext.tsx  GraphContext.tsx  ThreadProvider.tsx  utils.ts
apps/web/src/hooks/: useContextDocuments.tsx  useStore.tsx  utils.ts
apps/web/src/lib/: attachments.tsx  get_language_template.ts
apps/web/src/styles/: ArticleContainer.module.css
(+45 files in other folders)
